# duelcraft

./: .gitattributes  .gitignore  .gitmodules  build.gradle  duel_screen.xml  gradle.properties
docs/: engine-implementation-checklist.md  jni-integration-roadmap.md  ldlib2-ui-guide.md
docs/superpowers/plans/: 2026-04-11-field-selection-mode.md  2026-04-12-card-query-pipeline.md  2026-04-12-select-sum-unselect-card.md  2026-04-12-tier1-message-parsing.md
docs/superpowers/specs/: 2026-04-11-dual-channel-card-images.md  2026-04-11-field-selection-mode-design.md  2026-04-12-card-query-pipeline-design.md  2026-04-12-select-sum-unselect-card-design.md  2026-04-12-tier1-message-parsing-design.md
native/jni-bridge/: CMakeLists.txt
native/jni-bridge/include/: card_database.h  duel_engine.h  script_provider.h
native/jni-bridge/src/: card_database.cpp  duel_engine.cpp  jni_interface.cpp  script_provider.cpp
src/main/java/com/haxerus/duelcraft/: Config.java  Duelcraft.java  DuelcraftClient.java  DuelcraftLDLibPlugin.java
src/main/java/com/haxerus/duelcraft/client/: ClickDispatcher.java  ClientDuelState.java  ClientPayloadHandler.java  DuelScreen.java  FieldRenderer.java  LDLibDuelScreen.java  PromptController.java  ZoneInspectorController.java
src/main/java/com/haxerus/duelcraft/core/: Deck.java  DuelEngine.java  DuelOptions.java  NativeLoader.java  OcgConstants.java  OcgCore.java  PlayerOptions.java
src/main/resources/assets/duelcraft/lang/: en_us.json
src/main/resources/assets/duelcraft/ui/: duel_screen.xml
(+36 files in other folders)
